apps/frontend/src/css/index.css
body {
  --color-background: #f8f8f8;
  --color-text: #222;
  --color-text-accent: #2a2;
  --color-shadow: #0003;
  --color-background-admin: #ffc048;
  --color-background-error: #fa7676;
  --color-text-error: #4f0a0a;
  --color-background-highlight: #fff;
  --color-background-header: #fff;
  --color-background-footer: #121118;
  --color-text-footer: #fff;
  --color-text-header: #444;
  --color-accent: #3c3;
  --color-background-alternate: #f0f0f0;
  --color-background-hover: #e8e8e8;
  --color-border-table: #aaa;
  --color-background--ranking-table-runner-stopped-badge: #d34242;
  --color-text--ranking-table-runner-stopped-badge: #fff;
  --color-border-card: #ddd;
  --color-border-button: #eee;
  --color-background-button: #fff;
  --color-text-button-accent: #fff;
  --color-accent-desaturated: #9c9;
}

body[data-bs-theme="dark"] {
  --color-background: #1a1a1a;
  --color-text: #ddd;
  --color-text-accent: #2a2;
  --color-shadow: #000a;
  --color-background-admin: #ffc048;
  --color-background-error: #8a0505;
  --color-text-error: #f5b2b2;
  --color-background-highlight: #111;
  --color-background-header: #111;
  --color-background-footer: #040208;
  --color-text-footer: #fff;
  --color-text-header: #fff;
  --color-accent: #3c3;
  --color-background-alternate: #222;
  --color-background-hover: #233523;
  --color-border-table: #333;
  --color-background--ranking-table-runner-stopped-badge: #d34242;
  --color-text--ranking-table-runner-stopped-badge: #fff;
  --color-border-card: #222;
  --color-border-button: #111;
  --color-background-button: #000;
  --color-text-button-accent: #000;
  --color-accent-desaturated: #363;
}

body {
  margin: 0;
  font-family:
    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  background-color: var(--color-background);
  color: var(--color-text);
}

a,
button.a {
  color: var(--color-text-accent);
  text-decoration: underline;
  cursor: pointer;

  border: none;
  background-color: transparent;
  font-size: inherit;
  font-weight: inherit;
  font-family: inherit;
}

.container-fluid {
  width: calc(100% - var(--bs-gutter-x));
}

#app {
  min-height: 100vh;

  display: flex;
  flex-direction: column;
}

#app-content-wrapper {
  flex: 1;
}

#app-header {
  box-shadow: 0 1px 2px var(--color-shadow);
}

#app-header-admin-section {
  display: flex;
  justify-content: space-between;

  background-color: var(--color-background-admin);

  padding: 5px 20px;
}

#app-header-error-section {
  background-color: var(--color-background-error);
  color: var(--color-text-error);

  padding: 5px 20px;
}

.admin-header-user-button {
  border: none;
  background-color: transparent;
  padding: 0;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
}

.admin-header-user-button:hover {
  cursor: pointer;
}

#app-header-main-section {
  height: 64px;

  display: flex;

  background-color: var(--color-background-header);
}

#app-header-logo-container {
  height: 100%;

  display: inline-flex;
  align-items: center;

  padding-left: 15px;
  padding-right: 15px;
}

#app-header-logo-container img {
  height: 90%;
}

#app-header-main-section nav {
  height: 100%;
}

#app-header-main-section nav ul {
  height: 100%;

  list-style-type: none;
  padding: 0;
  margin: 0;
}

#app-header-main-section nav ul li {
  height: 100%;

  display: inline-block;
}

#app-header-main-section nav ul li a {
  height: 100%;

  display: flex;
  align-items: center;

  position: relative;

  text-decoration: none;

  font-weight: 700;
  color: var(--color-text-header);

  padding-left: 5px;
  padding-right: 5px;

  margin-left: 10px;
  margin-right: 10px;

  transition:
    color 0.1s ease-out,
    border 0.1s ease-out;
}

@media (max-width: 480px) {
  #app-header-logo-container {
    padding-left: 5px;
    padding-right: 5px;
  }

  #app-header-logo-container img {
    height: 70%;
  }

  #app-header-main-section nav ul li {
    font-size: 0.9em;
  }

  #app-header-main-section nav ul li a {
    margin-left: 0;
    margin-right: 0;
  }
}

#app-header-main-section nav ul li a.active {
  color: var(--color-accent);
}

#app-header-main-section nav ul li a.active::after {
  content: " ";
  border-bottom: 3px solid var(--color-accent);
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

#app-header-main-section .header-fetch-loader-container {
  height: 100%;

  display: flex;
  align-items: center;
  justify-content: center;

  margin-left: 10px;
  margin-right: 10px;
}

#app-header-main-section .header-timer-container {
  height: 100%;

  display: flex;
  align-items: center;
  justify-content: flex-end;
}

#app-header-main-section .header-timer-container .header-timer {
  margin-right: 20px;

  font-weight: 700;
  color: var(--color-text-header);
}

.circular-loader svg {
  animation-duration: 0.5s;
  animation-name: circular-loader;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

@keyframes circular-loader {
  from {
    transform: rotate(0);
  }

  to {
    transform: rotate(360deg);
  }
}

#page-content {
  padding-bottom: 20px;
}

.flex-space-between-container {
  display: flex;
  justify-content: space-between;
}

dialog.modal::backdrop {
  background-color: #000;
  transition: background-color 1s ease-out;
  opacity: 0.5;
}

dialog.modal {
  width: max(460px, 30vw);

  border: none;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);

  padding: 0;

  top: 50%;
  transform: translateY(-50%);
}

dialog.modal .modal-content {
  padding: 1em;
}

dialog.modal .close-button {
  font-size: 1.25em;
  padding: 0 0.125em;
  line-height: 1;
  margin: 0;
  background-color: transparent;
  border: none;

  color: #666;
  transition: color 0.05s ease-out;

  position: absolute;
  top: 1rem;
  right: 1rem;
  z-index: 1;
}
/* ... */

